--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "walky",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Walky is an ecommerce plaform.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
