--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "test": "mocha tests/**/*.js"
+    "test": "mocha --require @babel/register 'tests/**/*.test.js'"
   },
   "keywords": [],
   "author": "",
@@ -12,19 +11,23 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "chai-http": "^5.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
+    "sinon": "^7.5.0",
+    "sinon-mongoose": "^2.3.0",
     "stripe": "^16.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/register": "^7.24.6",
     "mocha": "^10.7.3",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
